# flutter_music_picker

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/rnd/flutter_music_picker/: FlutterMusicPickerPlugin.kt
darwin/Classes/: FlutterMusicPickerPlugin.swift
darwin/flutter_music_picker/: Package.swift
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/rnd/flutter_music_picker_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_music_picker.podspec
ios/Classes/: FlutterMusicPickerPlugin.swift
ios/flutter_music_picker/: Package.swift
lib/: flutter_music_picker.dart
lib/src/: flutter_music_picker.dart  flutter_music_picker_method_channel.dart  flutter_music_picker_platform_interface.dart  flutter_music_picker_web.dart  logger.dart  music_item.dart
linux/: CMakeLists.txt  flutter_music_picker_plugin.cc  flutter_music_picker_plugin.h
macos/: flutter_music_picker.podspec
macos/Classes/: FlutterMusicPickerPlugin.swift
macos/flutter_music_picker/: Package.swift
test/: flutter_music_picker_test.dart
windows/: CMakeLists.txt  flutter_music_picker_plugin.cpp  flutter_music_picker_plugin.h
windows/flutter_music_picker/: flutter_music_picker_plugin_c_api.cpp  flutter_music_picker_plugin_c_api.h
